Remove unnecessary JVM args in test context